unpackaged/main/default/objects/DPN_Line_Item__c/DPN_Line_Item__c.object-meta.xml
<CustomObject>
    <label>DPN Line Item</label>
    <nameField>
        <displayFormat>DPNLI-{00000000}</displayFormat>
        <label>DPN Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DPN Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>