unpackaged/main/default/objects/DPN_Line_Item__c/fields/Activo__c.field-meta.xml
<CustomField>
    <fullName>Activo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>La funcion de este field es poder mostrar la clave al usuario.</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>