unpackaged/main/default/objects/DPN_Line_Item__c/fields/Consumido__c.field-meta.xml
<CustomField>
    <fullName>Consumido__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Consumido</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>