unpackaged/main/default/objects/DPN_Line_Item__c/fields/DPN__c.field-meta.xml
<CustomField>
    <fullName>DPN__c</fullName>
    <label>DPN</label>
    <referenceTo>DPN__c</referenceTo>
    <relationshipLabel>DPN Line Items</relationshipLabel>
    <relationshipName>DPN_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>