unpackaged/main/default/objects/DPN_Line_Item__c/fields/L_mite_Mensual__c.field-meta.xml
<CustomField>
    <fullName>L_mite_Mensual__c</fullName>
    <label>Lìmite Mensual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>