unpackaged/main/default/objects/DPN_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>01t7i00000AYnZiAAL</value>
    </filters>
    <label>All</label>
</ListView>